new: usr: require passwd msgs be encrypted
Change-Id: I7e67bdf0be9071fa7bf0b3b92794b01f5b3f6abb
Signed-off-by: Mohamed Kahn <mohamed.kahn@hpe.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ add_executable ( ${PASSWDSRV}
 
 target_link_libraries (${PASSWDSRV}
                        ${OVSCOMMON_LIBRARIES} ${OVSDB_LIBRARIES}
-                       -lpthread -lrt -lcrypt)
+                       -lpthread -lrt -lcrypt -lcrypto)
 
 # Rules to install ops-passwd-srv binary in rootfs
 install(TARGETS ${PASSWDSRV}
