WIP User Management CLI
Change-Id: I3a69e76b4b3c52d525c7b9198f41ea2f88b31d02
Signed-off-by: Nilesh S Shinde <nilesh.shinde@hpe.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ target_link_libraries (${PASSWDSRV} ${CONFIG_YAML_LIBRARIES}
                        -lpthread -lrt -lcrypt -lcrypto -lyaml)
 
 add_subdirectory(src/lib)
+add_subdirectory(src/cli)
 
 # Rules to install ops-passwd-srv binary in rootfs
 install(TARGETS ${PASSWDSRV}
