WIP User Management CLI
Change-Id: I3a69e76b4b3c52d525c7b9198f41ea2f88b31d02
Signed-off-by: Nilesh S Shinde <nilesh.shinde@hpe.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ cmake_minimum_required (VERSION 2.8)
 
 set (PASSWDSRV ops-passwd-srv)
 project (${PASSWDSRV})
+
 set (SRC_DIR src)
 set (INCL_DIR include)
 
@@ -48,6 +49,8 @@ target_link_libraries (${PASSWDSRV} ${CONFIG_YAML_LIBRARIES}
                        -lpthread -lrt -lcrypt -lcrypto -lyaml)
 
 add_subdirectory(src/lib)
+add_subdirectory(src/cli)
+
 
 # Rules to install ops-passwd-srv binary in rootfs
 install(TARGETS ${PASSWDSRV}
